# agent-session-viewer

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_session_viewer/: __init__.py  db.py  main.py  parser.py  sync.py
agent_session_viewer/static/: index.html
scripts/: changelog.sh  release.sh
tauri-app/: .gitignore  README.md  SIGNING.md  package.json
tauri-app/scripts/: build_release.sh  notarize.sh
tauri-app/src/: app.js  index.html  tests.html
tauri-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: commands.rs  db.rs  main.rs  parser.rs  sync.rs
tests/: test_db.py  test_main.py  test_sync.py
