[project]
name = "agent-session-viewer"
version = "0.1.0"
description = "A web viewer for AI agent coding sessions (Claude Code, Codex, etc.)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
agent-session-viewer = "agent_session_viewer.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_session_viewer"]
