[project]
name = "agent-session-viewer"
version = "0.1.2"
description = "A web viewer for AI agent coding sessions (Claude Code, Codex, etc.)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-session-viewer = "agent_session_viewer.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_session_viewer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
