[package]
name = "agent-session-viewer"
version = "0.1.0"
description = "Browse and search AI coding sessions"
authors = ["Wes McKinney"]
license = "MIT"
repository = "https://github.com/wesm/agent-session-viewer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
md5 = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
